# ChefRAG

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  recipes_pages.py  requirements.txt
benchmark/: Questions_qeneration_ipynb_.ipynb  RAG_Evaluation_ipynb_.ipynb  ragllm_vs_llm.py
chunks/: chunks_creation.ipynb  clean_texts.py  create_chunks.py  vectorize_chunks.py
data/: agents.json  stop_chars.json
notebooks/: find_stop_chars.ipynb  human_picked_dataset.ipynb  vizualize_chunks.ipynb
parser/: recipes_pages.py  recipes_texts.py  unique_recipes.py  utils.py
qdrant/: search.py  upload.py
utils/: push_to_hf_hub.py  safe_eval.py
